<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeZup"
    tools:context=".TelaCadastro2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_da_zup"
            android:src="@mipmap/logo_da_zup" />

        <EditText
            android:id="@+id/etUsuario"
            style="@style/campo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario" />

        <EditText
            android:id="@+id/etSenha"
            style="@style/campo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/etFoto"
            style="@style/campo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/foto_de_perfil"
            android:inputType="text" />

        <Switch
            android:id="@+id/switchInfluencer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="16dp"
            android:text="@string/influencer"
            android:textColor="@color/amareloZup"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/aceitarCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/aceitar_termos"
            android:textColor="@color/amareloZup" />


        <Button
            android:id="@+id/cadastrarButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/amareloZup"
            android:text="@string/cadastrar"
            android:textColor="@color/verdeZup" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>