<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeZup"
    tools:context=".TelaCadastro1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:src="@mipmap/logo_da_zup" />


        <EditText
            android:id="@+id/etNome"
            style="@style/campoDeEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomeUsuario" />


        <EditText
            android:id="@+id/etSobrenome"
            style="@style/campoDeEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sobrenomeUsuario" />


        <EditText
            android:id="@+id/etCpf"
            style="@style/campoDeEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CPF"
            android:inputType="number" />


        <EditText
            android:id="@+id/etCnpj"
            style="@style/campoDeEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CNPJ"
            android:inputType="number" />


        <Button
            android:id="@+id/avancarCadastroButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/amareloZup"
            android:onClick="avancarCadastro"
            android:text="@string/avancar"
            android:textColor="@color/verdeZup" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>