<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeZup"
    tools:context=".Onboarding3">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/voltar_amarelo" />

                <TextView
                    android:id="@+id/tv_skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:onClick="pularOnboarding"
                    android:text="@string/pular"
                    android:textColor="@color/amareloZup"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="664dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    style="@style/imagemOnboarding"
                    android:src="@mipmap/onboarding3" />

                <TextView
                    style="@style/tituloOnboarding"
                    android:text="@string/comece_agora_a_aprender_sobre_o_mercado">

                </TextView>

                <TextView
                    style="@style/textoOnboarding"
                    android:text="@string/tire_suas_d_vidas_acesse_as_melhores_not_cias_voltadas_para_quem_est_come_ando_amplie_seu_conhecimento_do_assunto_e_n_o_tenha_mais_d_vidas" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/proximoOnboarding3"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@color/amareloZup"
                android:gravity="center"
                android:text="@string/continuar"
                android:textColor="@color/verdeZup"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>