<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7EAF0"
    tools:context=".presenter.register.CadastroCPF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/voltar_preto" />

                <TextView
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/cancelar"
                    android:textColor="@color/verdeZup"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="664dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/tituloLoginCadastro"
                    android:text="CPF" />

                <EditText
                    android:id="@+id/cpfEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="#D7EAF0"
                    android:hint="|"
                    android:inputType="number"
                    android:shadowColor="@color/verdeZup"
                    android:textColor="@color/verdeZup"
                    android:textColorHint="#013440" />

                <TextView
                    style="@style/tituloLoginCadastro"
                    android:text="@string/cnpj_caso_empresa" />

                <EditText
                    android:id="@+id/cnpjEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="#D7EAF0"
                    android:hint="|"
                    android:inputType="number"
                    android:shadowColor="@color/verdeZup"
                    android:textColor="@color/verdeZup"
                    android:textColorHint="#013440" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line_3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="A sua privacidade é importante para nós. A Zup está comprometido em proteger seus dados pessoais de acordo com a Lei Geral de Proteção de Dados (LGPD)."
                    android:textColor="@color/black"
                    android:textSize="20dp"/>

                <CheckBox
                    android:id="@+id/aceitarCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/aceitar_termos"
                    android:textColor="@color/verdeZup"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/buttonContinuar"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@color/amareloZup"
                android:gravity="center"
                android:text="@string/finalizar_cadastro"
                android:textColor="@color/verdeZup"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>